Fix vertical alignment of remove button at 480px

--- a/src/pages/posPage.css
+++ b/src/pages/posPage.css
@@ -281,6 +281,10 @@
   span {
     font-size: 1rem !important;
   }
+
+  .table tbody tr td {
+    vertical-align: middle !important;
+  }
 }
 
 * {
